RESOLVED FIXED76344
[WK2] Navigation events not triggered by a mouse event claim to be triggered by the left mouse button during policy decisions
https://bugs.webkit.org/show_bug.cgi?id=76344
Summary [WK2] Navigation events not triggered by a mouse event claim to be triggered ...
Martin Robinson
Reported 2012-01-15 09:16:36 PST
During policy decision, navigation events that were not triggered by the mouse should claim that they were triggered by WebMouseEvent::NoButton intsead of WebMouseEvent::LeftButton.
Attachments
Patch (2.47 KB, patch)
2012-01-15 10:33 PST, Martin Robinson
no flags
Patch adding test (4.60 KB, patch)
2012-01-21 12:06 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2012-01-15 10:33:58 PST
Sam Weinig
Comment 2 2012-01-20 16:21:42 PST
Comment on attachment 122569 [details] Patch If you can, it would be great to add a test case to TestWebKitAPI, but it is not absolutely necessary for this simple a fix.
Martin Robinson
Comment 3 2012-01-21 12:06:17 PST
Created attachment 123454 [details] Patch adding test
Martin Robinson
Comment 4 2012-01-21 12:09:22 PST
Added a patch with a test. GTK+ doesn't yet build the C API tests yet, so I'm doing this blindly. If it passes the EWS I'll land it and watch the bots. Thanks for the review!
Martin Robinson
Comment 5 2012-01-25 12:37:19 PST
Note You need to log in before you can comment on or make changes to this bug.